[workspace.package]
authors = ["Rowan Hart <rowanbhart@gmail.com>"]
categories = ["virtualization", "emulator", "qemu"]
description = "Rust bindings and binary installers for QEMU"
edition = "2021"
homepage = "https://github.com/novafacing/qemu-rs"
license = "GPL-2.0-only"
publish = true
readme = "README.md"
repository = "https://github.com/novafacing/qemu-rs"
version = "8.2.2-v0"

[workspace]
resolver = "2"
members = [
    "qemu",
    "qemu-plugin",
    "qemu-plugin-sys",
    "plugins/tiny",
    "plugins/tiny-system",
    "plugins/tracer",
]
default-members = ["qemu-plugin", "qemu-plugin-sys"]

[workspace.dependencies]
qemu-plugin-sys = { version = "8.2.2-v0", path = "qemu-plugin-sys" }
qemu-plugin = { version = "8.2.2-v0", path = "qemu-plugin" }
qemu = { version = "8.2.2-v0", path = "qemu" }
