[workspace.package]
authors = ["Rowan Hart <rowanbhart@gmail.com>"]
categories = ["virtualization", "emulator", "qemu"]
description = "Rust bindings and binary installers for QEMU"
edition = "2021"
homepage = "https://github.com/novafacing/qemu-rs"
license = "GPL-2.0-or-later"
publish = true
readme = "README.md"
repository = "https://github.com/novafacing/qemu-rs"
version = "9.2.0-v0"

[workspace]
resolver = "2"
members = [
    "qemu-plugin",
    "qemu-plugin-sys",
    "qemu-plugin-macro",
    "plugins/tiny",
    "plugins/tiny-system",
    "plugins/tracer",
    "plugins/icount",
]
default-members = ["qemu-plugin", "qemu-plugin-sys", "qemu-plugin-macro"]

[workspace.dependencies]
qemu-plugin-sys = { version = "9.2.0-v0", path = "qemu-plugin-sys", default-features = false }
qemu-plugin = { version = "9.2.0-v0", path = "qemu-plugin", default-features = false }
qemu-plugin-macro = { version = "9.2.0-v0", path = "qemu-plugin-macro" }
