[workspace.package]
authors = ["Rowan Hart <rowanbhart@gmail.com>"]
categories = ["virtualization"]
description = "Rust bindings and binary installers for QEMU"
edition = "2024"
homepage = "https://github.com/novafacing/qemu-rs"
license = "GPL-2.0-or-later"
publish = true
readme = "README.md"
repository = "https://github.com/novafacing/qemu-rs"
version = "10.1.0-v0"
rust-version = "1.88"

[workspace]
resolver = "2"
members = [
    "qemu-plugin",
    "qemu-plugin-sys",
    "plugins/tiny",
    "plugins/tiny-system",
    "plugins/tracer",
    "plugins/tracer-driver",
    "plugins/tracer-events",
    "plugins/icount",
]
default-members = ["qemu-plugin", "qemu-plugin-sys"]

[workspace.dependencies]
qemu-plugin = { version = "10.1.0-v0", path = "qemu-plugin", default-features = false }
qemu-plugin-sys = { version = "10.1.0-v0", path = "qemu-plugin-sys", default-features = false }
