[package]
name = "qemu-plugin-macro"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro2 = "1.0.101"
quote = "1.0.40"
semver = "1.0.26"
syn = "2.0.106"
