[package]
name = "qemu-plugin-sys"
authors.workspace = true
categories.workspace = true
description = "Low level bindings to the QEMU plugin API"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[build-dependencies]
anyhow = "1.0.75"

[lints.rust]
non_snake_case = "allow"