[package]
name = "qemu-plugin-sys"
authors.workspace = true
categories.workspace = true
description = "Low level bindings to the QEMU plugin API"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[build-dependencies]
anyhow = "1.0.86"

[lints.rust]
non_snake_case = "allow"

[features]
default = ["plugin-api-v4"]
# Use the V1 plugin API, which is defined for versions below 9.0.0
plugin-api-v1 = []
# Use the V2 plugin API, which is defined for version 9.0.0
plugin-api-v2 = []
# Use the V3 plugin API, which is defined for version 9.1.0
plugin-api-v3 = []
# Use the V4 plugin API, which is defined for versions above 9.1.0
plugin-api-v4 = []
