[package]
name = "qemu-plugin"
authors.workspace = true
categories.workspace = true
description = "High level bindings to the QEMU plugin API"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.99"
once_cell = "1.21.3"
qemu-plugin-sys = { workspace = true, default-features = false }
thiserror = "2.0.16"
num-traits = { version = "0.2.19", optional = true }
ctor = "0.5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
] }

libc = "0.2.175"
libloading = "0.8.8"
lazy_static = "1.5.0"

[features]
default = ["plugin-api-v5"]
# Use the V0 plugin API, which is defined starting in version 4.2.0
plugin-api-v0 = ["qemu-plugin-sys/plugin-api-v0"]
# Use the V1 plugin API, which is defined starting in version 6.0.0
plugin-api-v1 = ["qemu-plugin-sys/plugin-api-v1"]
# Use the V2 plugin API, which is defined starting in version 9.0.0
plugin-api-v2 = ["qemu-plugin-sys/plugin-api-v2"]
# Use the V3 plugin API, which is defined starting in version 9.1.0
plugin-api-v3 = ["qemu-plugin-sys/plugin-api-v3"]
# Use the V4 plugin API, which is defined starting in version 9.2.0
plugin-api-v4 = ["qemu-plugin-sys/plugin-api-v4"]
# Use the V5 plugin API, which is defined starting in version 10.1.0
plugin-api-v5 = ["qemu-plugin-sys/plugin-api-v5"]
num-traits = ["dep:num-traits"]

[lints.rust]
incomplete-features = "allow"
