[package]
name = "qemu-sparc32plus"
version = "0.1.0"
edition = "2021"
description = "QEMU binary installer for qemu-sparc32plus"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
memfd-exec = "0.1.4"
qemu = { version = "0.1.5", features = ["qemu-sparc32plus"] }
