[package]
name = "qemu-system-mips64"
version = "0.1.1"
edition = "2021"
description = "QEMU binary installer for qemu-system-mips64"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
memfd-exec = "0.1.5"
qemu = { version = "0.1.5", features = ["qemu-system-mips64"] }
