[package]
name = "tiny-system"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
qemu-plugin = { workspace = true, features = [
    "unix-weak-link",
], default-features = false }
anyhow = "1.0.75"
ffi = "0.1.0"
ctor = "0.2.6"

[features]
default = ["plugin-api-v2"]
plugin-api-v1 = ["qemu-plugin/plugin-api-v1"]
plugin-api-v2 = ["qemu-plugin/plugin-api-v2"]
plugin-api-v3 = ["qemu-plugin/plugin-api-v3"]
